<resources>
    <string name="app_name">Kelasku</string>
    <string name="welcome_to">Welcome To</string>
    <string name="kelasku">Kelasku</string>
    <string name="email_phone_number">Email / Phone Number</string>
    <string name="enter_your_email_or_phone_number">Enter Your Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="logo">logo</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="school">School</string>
    <string name="enter_your_school">Enter Your School</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="register_here">Register Here</string>
    <string name="logging_in">Logging In…</string>
    <string name="msg_token_fmt" formatted="true"> %s Token Confirmed</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="fill_please">Please Fill Before Proceeding</string>
    <string name="open">Open</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="edit_password">Edit Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="people_like_you">People Like You</string>
    <string name="alert">Alert</string>
    <string name="colek">Colek</string>
    <string name="text">Text</string>
    <string name="back">Back</string>
    <string name="banner">Banner</string>
    <string name="got_it">Got It</string>
    <string name="password_must_be_a_minimum_of_8_characters">Password must be a minimum of 8 characters</string>
    <string name="email_must_follow_the_format_of_the_common_email_addresses">Email must follow the format of common email addresses</string>
    <string name="name_can_t_be_less_than_5_characters">Name can\'t be less than 5 characters</string>
    <string name="history">History</string>
    <string name="edit_banner">Edit Banner</string>
    <string name="profile">Profile</string>
    <string name="like_history">Like History</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="logout">Logout</string>
    <string name="edit_credentials">Edit Credentials</string>
    <string name="hang_tight">Hang Tight…</string>
</resources>