<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/top_card"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/edit_password_back"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginStart="@dimen/_16sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/back"/>

                <TextView
                    android:id="@+id/text_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_password"
                    android:textSize="22sp"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginStart="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/text_top"
                    android:contentDescription="@string/logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/text_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_100sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@id/top_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                app:passwordToggleEnabled="true"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password_old_password"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                app:passwordToggleEnabled="true"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password_new_password"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                app:passwordToggleEnabled="true"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password_confirm_password"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/button_bg"
            android:text="@string/save"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_bold"
            android:layout_marginBottom="60dp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>