<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_kelasku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelasku"
            android:textSize="30sp"
            android:textColor="@color/main_blue"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="-6dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/text_welcome_to"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="35dp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@id/text_kelasku"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintTop_toBottomOf="@id/name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_name"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/name_case"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintTop_toBottomOf="@id/email_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_email"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/email_case"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintTop_toBottomOf="@id/phone_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_phone"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/school_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/phone_case"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/school_case"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintTop_toBottomOf="@id/school_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/register_input_school"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:labelFor="@id/register_input_school"
                    android:dropDownAnchor="@id/register_input_school"
                    android:paddingStart="50dp"
                    android:paddingEnd="0dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/school_case"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                app:passwordToggleEnabled="true"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintTop_toBottomOf="@id/password_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/register_input_password"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:paddingStart="50dp"
                    android:paddingEnd="0dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/confirm_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/password_case"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical"
                app:passwordToggleEnabled="true"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_confirm_password"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:paddingStart="50dp"
                    android:paddingEnd="0dp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_bold"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="60dp"
            app:layout_constraintTop_toBottomOf="@id/register_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium" />

            <TextView
                android:id="@+id/register_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/log_in"
                android:textSize="14sp"
                android:textColor="@color/main_blue"
                android:fontFamily="@font/inter_medium"
                android:layout_marginStart="5dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>